# mochibot

./: .gitignore  Cargo.toml  README.md  content.md  package.json
crates/mochibot-core/: Cargo.toml
crates/mochibot-daemon/: Cargo.toml
crates/mochibot-memory/: Cargo.toml
crates/mochibot-security/: Cargo.toml
desktop/mochibot-app/: README.md  package.json  svelte.config.js
desktop/mochibot-app/src-tauri/: tauri.conf.json
extensions/discord/: README.md  package.json
extensions/imessage/: README.md  package.json
extensions/signal/: README.md  package.json
extensions/slack/: README.md  package.json
extensions/telegram/: README.md
extensions/whatsapp/: README.md  package.json
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/kotlin/com/mochibot/app/mobile/: MainActivity.kt
mobile/ios/Runner.xcodeproj/: project.pbxproj
native/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
native/.github/workflows/: ci.yml
native/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
native/include/mochibot/: mochibot.hpp
native/source/: mochibot.cpp
native/test/: CMakeLists.txt
native/test/source/: mochibot_test.cpp
services/_sdk/: README.md  package.json
services/actions/: README.md
services/brain/: README.md  package.json
services/calendar/: README.md  package.json
services/cron/: README.md  package.json
services/email/: README.md
services/file-tools/: README.md  package.json
services/git/: README.md  package.json
services/memory-svc/: README.md  package.json
services/observer/: README.md
services/proactive/: README.md  package.json
services/stats/: README.md  package.json
services/writing/: README.md  package.json
